[tool.poetry]
name = "alinea-docs"
version = "0.1.0"
description = ""
authors = ["Idar Bergli <idarb@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
